--- a/sites/travellingchair.net/themes/tchair_ohm/sass/partials/components/forms/_search-form.scss
+++ b/sites/travellingchair.net/themes/tchair_ohm/sass/partials/components/forms/_search-form.scss
@@ -46,6 +46,9 @@
       line-height: 57px;
       margin-top: 0;
     }
+    button.new-search-button {
+      display: none;
+    }
     .views-exposed-form-search-page {
       display: block;
     }
