Fixed review format, added login button

--- a/sites/travellingchair.net/themes/tchair_ohm/sass/layouts/ohm-hero/ohm-hero-layout.scss
+++ b/sites/travellingchair.net/themes/tchair_ohm/sass/layouts/ohm-hero/ohm-hero-layout.scss
@@ -12,6 +12,9 @@ body {
 
 .l-constrained {
   @extend %container;
+  .tabs--primary {
+    display: none; // hide edit tabs
+  }
 }
 
 /* Header */
