--- a/sites/travellingchair.net/themes/tchair_ohm/sass/partials/_components.scss
+++ b/sites/travellingchair.net/themes/tchair_ohm/sass/partials/_components.scss
@@ -24,6 +24,8 @@
 // Blocks
 @import "components/blocks/nav-bar";
 @import "components/blocks/ratings";
+@import "components/blocks/reviews-list";
+@import "components/blocks/review";
 // Comments
 @import "components/comments/comment-wrapper";
 @import "components/comments/comment";
