--- a/sites/travellingchair.net/themes/tchair_ohm/sass/partials/_components.scss
+++ b/sites/travellingchair.net/themes/tchair_ohm/sass/partials/_components.scss
@@ -10,6 +10,8 @@
 @import "components/forms/search-form";
 @import "components/forms/password-confirm";
 @import "components/forms/collapsible";
+@import "components/forms/create-review";
+@import "components/forms/user_register";
 // Nodes
 @import "components/node/node";
 @import "components/node/node-article";
