--- a/sites/travellingchair.net/themes/tchair_ohm/css/styles.css
+++ b/sites/travellingchair.net/themes/tchair_ohm/css/styles.css
@@ -868,6 +868,53 @@ html.js fieldset.collapsed {
   display: none;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/forms\/_create-review\.scss}line{font-family:\0000310}}
+.rate-widget-emotion a.up, .rate-widget-emotion a.down {
+  text-indent: -119988px;
+  overflow: hidden;
+  text-align: left;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  border: none;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/forms\/_create-review\.scss}line{font-family:\0000317}}
+.rate-widget-emotion a.up.up, .rate-widget-emotion a.down.up {
+  background-image: url("../images/../images/thumbs_up.gif?1311813397");
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/forms\/_create-review\.scss}line{font-family:\0000320}}
+.rate-widget-emotion a.up.down, .rate-widget-emotion a.down.down {
+  background-image: url("../images/../images/thumbs_down.gif?1311813401");
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/forms\/_create-review\.scss}line{font-family:\0000323}}
+.rate-widget-emotion a.up:hover, .rate-widget-emotion a.down:hover {
+  background-position: 0 -24px;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/forms\/_create-review\.scss}line{font-family:\0000326}}
+.rate-widget-emotion a.up.selected, .rate-widget-emotion a.down.selected {
+  background-position: 0 -24px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/forms\/_create-review\.scss}line{font-family:\0000330}}
+.rate-widget-emotion a.rate-button {
+  height: 24px;
+  width: 24px;
+  line-height: 24px;
+  display: block;
+  padding: 0;
+  margin: 0 5px;
+  text-align: center;
+  text-decoration: none;
+  border-color: #ccc;
+  background-color: #ddd;
+  color: #666 !important;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/forms\/_create-review\.scss}line{font-family:\0000342}}
+.rate-widget-emotion a.rate-button:hover {
+  border-color: #1083d1;
+  background-color: #BBE3F4;
+  color: #1083d1 !important;
+}
+
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/forms\/_user_register\.scss}line{font-family:\000032}}
 #user-register-form fieldset#edit-locations {
   display: none;
