--- a/sites/travellingchair.net/themes/tchair_ohm/sass/partials/base/forms/_form-items.scss
+++ b/sites/travellingchair.net/themes/tchair_ohm/sass/partials/base/forms/_form-items.scss
@@ -11,6 +11,7 @@
   .form-text,
   .form-textarea {
     width: 100%;
+    max-width: 400px;
     background-color: #FFF;
     border: 1px solid $light-grey;
     color: $mid-grey;
