--- a/sites/travellingchair.net/themes/tchair_ohm/css/styles.css
+++ b/sites/travellingchair.net/themes/tchair_ohm/css/styles.css
@@ -671,8 +671,8 @@ img, media {
   border-bottom: none;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/misc\/_venue\.scss}line{font-family:\000032}}
-.page-node-87 a#review-now {
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/misc\/_venue\.scss}line{font-family:\000031}}
+a#review-now {
   display: inline-block;
   height: 2.2em;
   margin: 0;
@@ -692,20 +692,20 @@ img, media {
   cursor: pointer;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/utility\/abstractions\/_button\.scss}line{font-family:\0000328}}
-.page-node-87 a#review-now, .page-node-87 a#review-now:hover, .page-node-87 a#review-now:active, .page-node-87 a#review-now:focus, .page-node-87 a#review-now:visited {
+a#review-now, a#review-now:hover, a#review-now:active, a#review-now:focus, a#review-now:visited {
   text-decoration: none;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/utility\/abstractions\/_button\.scss}line{font-family:\0000332}}
-.page-node-87 a#review-now:hover {
+a#review-now:hover {
   background-color: #6a7076;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/utility\/abstractions\/_button\.scss}line{font-family:\0000337}}
-.page-node-87 a#review-now:active, .page-node-87 a#review-now:focus {
+a#review-now:active, a#review-now:focus {
   outline: none;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5) inset;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/utility\/abstractions\/_button\.scss}line{font-family:\0000342}}
-.page-node-87 a#review-now::-moz-focus-inner {
+a#review-now::-moz-focus-inner {
   border: 0;
   padding: 0;
 }
@@ -914,6 +914,45 @@ html.js fieldset.collapsed {
   border-color: #1083d1;
   background-color: #BBE3F4;
   color: #1083d1 !important;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/forms\/_create-review\.scss}line{font-family:\0000349}}
+a#review-now {
+  display: inline-block;
+  height: 2.2em;
+  margin: 0;
+  padding: 0 1.2em;
+  background-color: #222222;
+  border: none;
+  color: #FFF;
+  font-weight: 700;
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 2.2;
+  letter-spacing: 0.15em;
+  text-transform: uppercase;
+  vertical-align: middle;
+  white-space: nowrap;
+  overflow: visible;
+  cursor: pointer;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/utility\/abstractions\/_button\.scss}line{font-family:\0000328}}
+a#review-now, a#review-now:hover, a#review-now:active, a#review-now:focus, a#review-now:visited {
+  text-decoration: none;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/utility\/abstractions\/_button\.scss}line{font-family:\0000332}}
+a#review-now:hover {
+  background-color: #6a7076;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/utility\/abstractions\/_button\.scss}line{font-family:\0000337}}
+a#review-now:active, a#review-now:focus {
+  outline: none;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5) inset;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/utility\/abstractions\/_button\.scss}line{font-family:\0000342}}
+a#review-now::-moz-focus-inner {
+  border: 0;
+  padding: 0;
 }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/forms\/_user_register\.scss}line{font-family:\000032}}
